force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__SellingListPrice3rdCurrency__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SellingListPrice3rdCurrency__c</fullName>
    <label>Selling List Price(3rd Currency)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>