force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__SellingListPriceUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SellingListPriceUSD__c</fullName>
    <label>SELLING LIST PRICE(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>