force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__ServiceCategory__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ServiceCategory__c</fullName>
    <label>SERVICE CATEGORY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__ServiceCategory</valueSetName>
    </valueSet>
</CustomField>