force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__ServicePricingID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ServicePricingID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SERVICE PRICING ID</label>
    <referenceTo>clofor_com_cfs__TariffMaster__c</referenceTo>
    <relationshipLabel>QUOTE LINE</relationshipLabel>
    <relationshipName>QuoteLine</relationshipName>
    <type>Lookup</type>
</CustomField>