force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__ServiceSchedule__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ServiceSchedule__c</fullName>
    <label>SERVICE SCHEDULE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>