force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__TextQuoteID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TextQuoteID__c</fullName>
    <label>Text Quote ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>