force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__TextServiceID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TextServiceID__c</fullName>
    <inlineHelpText>Service Name for Search in List View</inlineHelpText>
    <label>Text Service ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>