force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__ThirdCurrencyBuying__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ThirdCurrencyBuying__c</fullName>
    <label>Third Currency-Buying</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__Currency</valueSetName>
    </valueSet>
</CustomField>