force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__TotalAmountofBuyingFCYFor__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalAmountofBuyingFCYFor__c</fullName>
    <formula>clofor_com_cfs__BuyingListPriceUSD__c *  clofor_com_cfs__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Buying(FCY)-For</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>