force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__TotalAmountofSellingFCYFor__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalAmountofSellingFCYFor__c</fullName>
    <formula>clofor_com_cfs__SellingListPriceUSD__c *  clofor_com_cfs__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Selling(FCY)-For</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>