force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__TotalRollupBuyUniPriceFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalRollupBuyUniPriceFCY__c</fullName>
    <formula>clofor_com_cfs__RollupProdBuyingUnitPriceUSD__c+clofor_com_cfs__RollupSvcBuyingUnitPriceUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOTAL ROLLUP BUYING UNIT PRICE(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>