force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__TotalRollupBuyUniPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalRollupBuyUniPriceLocal__c</fullName>
    <formula>clofor_com_cfs__RollupProdBuyingUnitPriceLocal__c+clofor_com_cfs__RollupSvcBuyingUnitPriceLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOTAL ROLLUP BUYING UNIT PRICE(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>