force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__TotalRollupSellUnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalRollupSellUnitPriceLocal__c</fullName>
    <formula>clofor_com_cfs__RollupProdSellingUnitPriceLocal__c+clofor_com_cfs__RollupSvcSellingUnitPriceLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOTAL ROLLUP SELLING UNIT PRICE(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>