force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__TotalRollupSellUnitPricFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalRollupSellUnitPricFCY__c</fullName>
    <formula>clofor_com_cfs__RollupProdSellingUnitPriceUSD__c+clofor_com_cfs__RollupSvcSellingUnitPriceUSD__c</formula>
    <label>TOTAL ROLLUP SELLING UNIT PRICE(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>