force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__TransitTimeDays__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TransitTimeDays__c</fullName>
    <label>TRANSIT TIME(Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>