force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/Total_Amount_of_Selling_Local_For__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_of_Selling_Local_For__c</fullName>
    <formula>clofor_com_cfs__Quantity__c *   clofor_com_cfs__SellingListPriceLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Selling(Local)-For</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>