force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/recordTypes/clofor_com_cfs__DomesticLogisticsServiceQuote.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__DomesticLogisticsServiceQuote</fullName>
    <active>false</active>
    <description>Service Quote Line for Logistics Service</description>
    <label>Logistics Service Quote</label>
</RecordType>