force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/recordTypes/clofor_com_cfs__ProductQuoteLine.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__ProductQuoteLine</fullName>
    <active>false</active>
    <label>Product Quote Line</label>
</RecordType>