force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/recordTypes/clofor_com_cfs__ServiceQuoteLine.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__ServiceQuoteLine</fullName>
    <active>true</active>
    <description>Service Quote Line for Ocean(Sea) Logistic Service</description>
    <label>Service Quote Line</label>
</RecordType>