force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__LineItemName__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>clofor_com_cfs__ParentQuoteLine__c</columns>
    <columns>clofor_com_cfs__QuoteID__c</columns>
    <columns>clofor_com_cfs__BuyingListPriceLocal__c</columns>
    <columns>clofor_com_cfs__BuyingAmountInclTaxLocal__c</columns>
    <columns>clofor_com_cfs__SellingListPriceLocal__c</columns>
    <columns>clofor_com_cfs__DiscountRate__c</columns>
    <columns>clofor_com_cfs__Quantity__c</columns>
    <columns>clofor_com_cfs__TotalAmountSellingLocal__c</columns>
    <columns>clofor_com_cfs__TaxRate__c</columns>
    <columns>clofor_com_cfs__AmountOfSellingTaxLocal__c</columns>
    <columns>clofor_com_cfs__SellingAmountInclTaxLocal__c</columns>
    <filterScope>Everything</filterScope>
    <label>0.All</label>
</ListView>