force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/listViews/clofor_com_cfs__Mass_new_Q_Line_FCY.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__Mass_new_Q_Line_FCY</fullName>
    <columns>clofor_com_cfs__QuoteID__c</columns>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__QuoteLineNumber__c</columns>
    <columns>clofor_com_cfs__ServicePricingID__c</columns>
    <columns>clofor_com_cfs__Quantity__c</columns>
    <columns>clofor_com_cfs__Unit__c</columns>
    <columns>clofor_com_cfs__ContainerType__c</columns>
    <columns>clofor_com_cfs__CarrierAirlinerVendor__c</columns>
    <columns>clofor_com_cfs__SellingListPriceUSD__c</columns>
    <columns>clofor_com_cfs__BuyingListPriceUSD__c</columns>
    <columns>clofor_com_cfs__TaxRate__c</columns>
    <columns>clofor_com_cfs__TaxRateBuying__c</columns>
    <columns>clofor_com_cfs__CurrencySelling__c</columns>
    <columns>clofor_com_cfs__CurrencyBuying__c</columns>
    <columns>clofor_com_cfs__PrintingSection__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>clofor_com_cfs__QuoteLine__c.clofor_com_cfs__ServiceQuoteLine</value>
    </filters>
    <filters>
        <field>clofor_com_cfs__LineItemName__c</field>
        <operation>equals</operation>
    </filters>
    <label>Mass new Q.Line (FCY)</label>
    <language>en_US</language>
</ListView>