force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/listViews/clofor_com_cfs__MassEditQLineAirSelling.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__MassEditQLineAirSelling</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__QuoteLineNumber__c</columns>
    <columns>clofor_com_cfs__LineItemName__c</columns>
    <columns>clofor_com_cfs__ServicePricingID__c</columns>
    <columns>clofor_com_cfs__Quantity__c</columns>
    <columns>clofor_com_cfs__Unit__c</columns>
    <columns>clofor_com_cfs__Minimum__c</columns>
    <columns>clofor_com_cfs__Under45kg__c</columns>
    <columns>clofor_com_cfs__Over45kg__c</columns>
    <columns>clofor_com_cfs__Over100kg__c</columns>
    <columns>clofor_com_cfs__Over300kg__c</columns>
    <columns>clofor_com_cfs__Over500kg__c</columns>
    <columns>clofor_com_cfs__Over1000kg__c</columns>
    <columns>clofor_com_cfs__FSCSCS__c</columns>
    <columns>clofor_com_cfs__ISS__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>clofor_com_cfs__QuoteLine__c.clofor_com_cfs__AirLogisticsServiceQuote</value>
    </filters>
    <label>Mass Edit Q.Line-Air Selling</label>
    <language>en_US</language>
</ListView>