force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/listViews/clofor_com_cfs__MassEditQLineLogisticsBuying.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__MassEditQLineLogisticsBuying</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__QuoteLineNumber__c</columns>
    <columns>clofor_com_cfs__LineItemName__c</columns>
    <columns>clofor_com_cfs__ServicePricingID__c</columns>
    <columns>clofor_com_cfs__CarrierAirlinerVendor__c</columns>
    <columns>clofor_com_cfs__Quantity__c</columns>
    <columns>clofor_com_cfs__Unit__c</columns>
    <columns>clofor_com_cfs__ContainerType__c</columns>
    <columns>clofor_com_cfs__CurrencyBuying__c</columns>
    <columns>clofor_com_cfs__ExchangeRateBuying__c</columns>
    <columns>clofor_com_cfs__BuyingListPriceLocal__c</columns>
    <columns>clofor_com_cfs__BuyingListPriceUSD__c</columns>
    <columns>clofor_com_cfs__TotalAmountBuyingLocal__c</columns>
    <columns>clofor_com_cfs__AmountOfBuyingTaxLocal__c</columns>
    <columns>clofor_com_cfs__BuyingAmountInclTaxLocal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>clofor_com_cfs__QuoteLine__c.clofor_com_cfs__DomesticLogisticsServiceQuote</value>
    </filters>
    <label>Mass Edit Q.Line-Logistics Buying</label>
    <language>en_US</language>
</ListView>