force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/listViews/clofor_com_cfs__MassEditQLineLogisticsSelling.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__MassEditQLineLogisticsSelling</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__QuoteLineNumber__c</columns>
    <columns>clofor_com_cfs__LineItemName__c</columns>
    <columns>clofor_com_cfs__ServicePricingID__c</columns>
    <columns>clofor_com_cfs__Quantity__c</columns>
    <columns>clofor_com_cfs__Unit__c</columns>
    <columns>clofor_com_cfs__ContainerQuantity__c</columns>
    <columns>clofor_com_cfs__CurrencySelling__c</columns>
    <columns>clofor_com_cfs__ExchangeRateSelling__c</columns>
    <columns>clofor_com_cfs__SellingListPriceLocal__c</columns>
    <columns>clofor_com_cfs__SellingListPriceUSD__c</columns>
    <columns>clofor_com_cfs__TotalAmountSellingLocal__c</columns>
    <columns>clofor_com_cfs__AmountOfSellingTaxLocal__c</columns>
    <columns>clofor_com_cfs__SellingAmountInclTaxLocal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>clofor_com_cfs__QuoteLine__c.clofor_com_cfs__DomesticLogisticsServiceQuote</value>
    </filters>
    <label>Mass Edit Q.Line-Logistics Selling</label>
    <language>en_US</language>
</ListView>